--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
-    "react-web-share": "^1.1.6"
+    "react-scripts": "^5.0.1", 
+    "react-web-share": "^1.1.6",
+    "swiper": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
