--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@google/model-viewer": "^1.12.0",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-query-devtools": "^4.0.10",
+    "@testing-library/react": "^13.4.0",
     "axios": "^0.27.2",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
