--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
     "@google/model-viewer": "^1.12.0",
+    "@mui/material": "^5.11.0",
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-query-devtools": "^4.0.10",
-    "@testing-library/react": "^13.4.0",
     "axios": "^0.27.2",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
