--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@tanstack/react-query": "^4.1.3",
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.3",
+    "jquery": "^3.6.3",
+    "popper.js": "^1.16.1",
     "qrcode.react": "^3.1.0",
     "react": "^17.0.2",
     "react-device-detect": "^2.2.2",
