--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "version": "1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -21,7 +21,7 @@
     "react": "^17.0.2",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
